--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/RL0209002/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/RL0209002/FlowCreate.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="description" content="洁丽康公司员工参保申请" />
 
     <link rel="stylesheet" href="../../../../Content/mui.min.css" />
     <link rel="stylesheet" href="../../../../Content/mui.picker.min.css" />
@@ -13,7 +14,6 @@
     <link rel="stylesheet" href="../../../../Content/upload.css" />
     <link rel="stylesheet" href="../../../../Content/ApprovalUtils.css" />
     <title></title>
-    <meta charset="utf-8" />
 </head>
 <body>
     <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
@@ -28,16 +28,16 @@
             </div>
             <div class="mui-input-row">
                 <label>申请日期<i style="color:red;">*</i></label>
-                <input type="text" id="fdate" readonly />
+                <input type="text" id="fdate" readonly placeholder="请选择" />
             </div>
-            <div class="mui-input-row itemtitle">
-                <label>转正信息</label>
+            <div class="mui-input-row">
+                <label>联系电话</label>
+                <input type="tel" id="flxdh" readonly />
+            </div>
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                <label>参保信息</label>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>所属集团</label>
-                    <textarea rows="2" id="fssjt" readonly></textarea>
-                </div>
                 <div class="mui-col-xs-3" style="display:flex;">
                     <label>所属公司</label>
                     <textarea rows="2" id="fssgs" readonly></textarea>
@@ -50,76 +50,57 @@
                     <label>职位</label>
                     <textarea rows="2" id="fzw" readonly></textarea>
                 </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>入职日期</label>
+                    <textarea rows="2" id="frzrq" readonly></textarea>
+                </div>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
                 <div class="mui-col-xs-3" style="display:flex;">
+                    <label>身份证号</label>
+                    <textarea rows="2" id="fsfzh" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
                     <label>性别</label>
-                    <textarea rows="2" id="fxb" readonly></textarea>
+                    <textarea rows="2" id="fsb" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
                     <label>出生日期</label>
                     <textarea rows="2" id="fcsrq" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>身份证号</label>
-                    <textarea rows="2" id="fsfzh" readonly></textarea>
+                    <label>户口性质<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fhkxz" readonly placeholder="请选择"></textarea>
                 </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>联系电话</label>
-                    <textarea rows="2" id="flxdh" readonly></textarea>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <label>户口所在地<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fhkszd" placeholder="请填写"></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <label>家庭地址<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fjtdz"></textarea>
                 </div>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>最高学历</label>
-                    <textarea rows="2" id="fzgxl" readonly></textarea>
+                    <label>工作城市<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fgzcs" placeholder="请填写"></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>毕业院校</label>
-                    <textarea rows="2" id="fbyyx" readonly></textarea>
+                    <label>社保缴纳城市<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fsbjncs" placeholder="请填写"></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>专业</label>
-                    <textarea rows="2" id="fzy" readonly></textarea>
+                    <label>社保起缴年月<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fsbqjny" readonly placeholder="请选择"></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>毕业时间</label>
-                    <textarea rows="2" id="fbysj" readonly></textarea>
-                </div>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>入职时间</label>
-                    <textarea rows="2" id="frzsj" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>申请转正时间<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="fsqzzsj" readonly placeholder="请选择"></textarea>
-                </div>
-            </div>
-
-            <div class="mui-input-row itemtitle">
-                <label>自我评价<i style="color:red;">*</i></label>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:1vw;">
-                <div class="mui-col-xs-12 mui-col-md-5">
-                    <textarea rows="5" id="fzwpj" placeholder="请填写"></textarea>
-                </div>
-            </div>
-            <div class="mui-input-row itemtitle">
-                <label>直接上级填写</label>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:1vw;">
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>转正意见</label>
-                    <textarea rows="2" id="fzzyj" readonly placeholder="请选择"></textarea>
-                </div>
-                <div class="mui-col-xs-4" style="display:flex;">
-                    <label>延长转正期</label>
-                    <textarea rows="1" id="fyczzq" readonly style="padding:3vw;" placeholder="待填"></textarea>
-                </div>
-                <div class="mui-col-xs-2" style="display:flex;">
-                    <label style="padding:3vw;">个月</label>
+                    <label>社保中断缴至年月</label>
+                    <textarea rows="2" id="fsbzdjzny" readonly placeholder="请选择"></textarea>
                 </div>
             </div>
         </div>
@@ -141,12 +122,12 @@
     <script type="text/javascript" src="../../../../Scripts/common.js"></script>
     <script type="text/javascript" src="common.js"></script>
     <script>
-        
+
         mui.init();
 
         mui.ready(function () {
 
-            getVersion('\\03医用制品集团\\09洁丽康生物材料公司\\10_人力资源', '洁丽康公司员工试用期转正申请');
+            getVersion('\\03医用制品集团\\09洁丽康生物材料公司\\10_人力资源', '洁丽康公司员工参保申请');
             getBPMParam();
             _init._preCreate();
 
