--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/RL0209003/FlowAskDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/RL0209003/FlowAskDetail.html
@@ -26,102 +26,43 @@
                 <input type="text" id="fname" readonly />
             </div>
             <div class="mui-input-row">
-                <label>申请日期<i style="color:red;">*</i></label>
+                <label>填写日期</label>
                 <input type="text" id="fdate" readonly />
             </div>
-            <div class="mui-input-row itemtitle">
-                <label>转正信息</label>
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                <label>续签信息</label>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>所属集团</label>
-                    <textarea rows="2" id="fssjt" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>所属公司</label>
-                    <textarea rows="2" id="fssgs" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
+                <div class="mui-col-xs-4" style="display:flex;">
                     <label>部门</label>
                     <textarea rows="2" id="fbm" readonly></textarea>
                 </div>
-                <div class="mui-col-xs-3" style="display:flex;">
+                <div class="mui-col-xs-4" style="display:flex;">
                     <label>职位</label>
                     <textarea rows="2" id="fzw" readonly></textarea>
                 </div>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>性别</label>
-                    <textarea rows="2" id="fxb" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>出生日期</label>
-                    <textarea rows="2" id="fcsrq" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>身份证号</label>
-                    <textarea rows="2" id="fsfzh" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>联系电话</label>
-                    <textarea rows="2" id="flxdh" readonly></textarea>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>入职日期</label>
+                    <textarea rows="2" id="frzrq" readonly></textarea>
                 </div>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>最高学历</label>
-                    <textarea rows="2" id="fzgxl" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>毕业院校</label>
-                    <textarea rows="2" id="fbyyx" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>专业</label>
-                    <textarea rows="2" id="fzy" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>毕业时间</label>
-                    <textarea rows="2" id="fbysj" readonly></textarea>
-                </div>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>入职时间</label>
-                    <textarea rows="2" id="frzsj" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>申请转正时间<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="fsqzzsj" readonly></textarea>
-                </div>
-            </div>
-
-            <div class="mui-input-row itemtitle">
-                <label>自我评价<i style="color:red;">*</i></label>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:1vw;">
-                <div class="mui-col-xs-12 mui-col-md-5">
-                    <textarea rows="5" id="fzwpj" readonly></textarea>
-                </div>
-            </div>
-            <div class="mui-input-row itemtitle">
-                <label>直接上级填写</label>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:1vw;">
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>转正意见</label>
-                    <textarea rows="2" id="fzzyj" readonly></textarea>
+                <div class="mui-col-xs-8" style="display:flex;">
+                    <label>合同预计结束日期<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fjsrq" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-4" style="display:flex;">
-                    <label>延长转正期</label>
-                    <textarea rows="1" id="fyczzq" readonly style="padding:3vw;"></textarea>
-                </div>
-                <div class="mui-col-xs-2" style="display:flex;">
-                    <label style="padding:3vw;">个月</label>
+                    <label>拟下次签订年限<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fqdnx" readonly></textarea>
                 </div>
             </div>
-
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <label>备注</label>
+                    <textarea rows="2" id="fbz" readonly></textarea>
+                </div>
+            </div>
+            <input type="hidden" id="fssgs" readonly />
         </form>
 
         <div class="mui-table-view" style="margin-bottom:1rem;">
