--- a/BPMMobile/Pages/DraftFlow.html
+++ b/BPMMobile/Pages/DraftFlow.html
@@ -21,6 +21,7 @@
             height: 100%;
             overflow: auto;
             font-family: 'Microsoft YaHei';
+            cursor: pointer;
         }
 
         label {
