--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/RL0209002/FlowUndoDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/RL0209002/FlowUndoDetail.html
@@ -17,63 +17,92 @@
 <body>
     <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
         <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
+
             <div class="mui-input-row">
-                <label>员工姓名</label>
+                <label>工号</label>
+                <input type="text" id="fno" readonly />
+            </div>
+            <div class="mui-input-row">
+                <label>姓名</label>
                 <input type="text" id="fname" readonly />
-                <input type="hidden" id="fno" />
-            </div>
-            <div class="mui-input-row" style="display:block !important;">
-                <label>部门</label>
-                <input type="text" id="fdept" readonly />
             </div>
             <div class="mui-input-row">
-                <label>工作周</label>
-                <input type="text" id="fweek" readonly />
+                <label>申请日期<i style="color:red;">*</i></label>
+                <input type="text" id="fdate" readonly  />
             </div>
-            <div class="mui-row itemtitle" style="height:10vw;text-align:center;padding-top:2vw;">
-                <label>主要工作事项描述<i style="color:red;">*</i></label>
+            <div class="mui-input-row">
+                <label>联系电话</label>
+                <input type="tel" id="flxdh" readonly />
+            </div>
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                <label>参保信息</label>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>所属公司</label>
+                    <textarea rows="2" id="fssgs" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>部门</label>
+                    <textarea rows="2" id="fbm" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>职位</label>
+                    <textarea rows="2" id="fzw" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>入职日期</label>
+                    <textarea rows="2" id="frzrq" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>身份证号</label>
+                    <textarea rows="2" id="fsfzh" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>性别</label>
+                    <textarea rows="2" id="fsb" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>出生日期</label>
+                    <textarea rows="2" id="fcsrq" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>户口性质<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fhkxz" readonly></textarea>
+                </div>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
                 <div class="mui-col-xs-12" style="display:flex;">
-                    <textarea rows="5" id="fgznr" readonly></textarea>
+                    <label>户口所在地<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fhkszd" readonly></textarea>
                 </div>
-            </div>
-            <div class="mui-row itemtitle" style="height:10vw;text-align:center;padding-top:2vw;">
-                <label>存在主要问题及改进措施</label>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
                 <div class="mui-col-xs-12" style="display:flex;">
-                    <textarea rows="5" id="fczwt" readonly></textarea>
+                    <label>家庭地址<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fjtdz" readonly></textarea>
                 </div>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-8" style="display:flex;">
-                    <label>部门经理评价</label>
-                    <textarea rows="2" id="fpj_bmjl" readonly placeholder="请填写"></textarea>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>工作城市<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fgzcs" readonly></textarea>
                 </div>
-                <div class="mui-col-xs-4" style="display:flex;">
-                    <label>考核等级<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="fkhdj_bmjl" readonly placeholder="请选择"></textarea>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>社保缴纳城市<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fsbjncs" readonly></textarea>
                 </div>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-8" style="display:flex;">
-                    <label>总监评价</label>
-                    <textarea rows="2" id="fpj_zj" readonly placeholder="请填写"></textarea>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>社保起缴年月<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fsbqjny" readonly ></textarea>
                 </div>
-                <div class="mui-col-xs-4" style="display:flex;">
-                    <label>考核等级<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="fkhdj_zj" readonly placeholder="请选择"></textarea>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>社保中断缴至年月</label>
+                    <textarea rows="2" id="fsbzdjzny" readonly ></textarea>
                 </div>
             </div>
-
-            <input type="hidden" id="fmonth" readonly />
-            <input type="hidden" id="fyear" readonly />
-            <input type="hidden" id="fcfbj" readonly />
-
-            <input type="hidden" id="fksdate" readonly />
-            <input type="hidden" id="fjsdate" readonly />
-            <input type="hidden" id="ftbdate" readonly />
             <div class="mui-input-row" id="csd">
                 <label>加签</label>
                 <div class="mui-switch mui-switch-blue" id="csswitch">
@@ -172,6 +201,10 @@
             <button class="mui-btn mui-btn-danger" type="button" onclick="cancelConfirm()">取消</button>
         </div>
     </div>
+
+
+
+
     <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
     <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
     <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
