--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/RL0209004/FlowUndoDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/RL0209004/FlowUndoDetail.html
@@ -17,63 +17,52 @@
 <body>
     <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
         <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
+
             <div class="mui-input-row">
-                <label>员工姓名</label>
+                <label>申请人</label>
                 <input type="text" id="fname" readonly />
-                <input type="hidden" id="fno" />
             </div>
-            <div class="mui-input-row" style="display:block !important;">
-                <label>部门</label>
+            <div class="mui-input-row">
+                <label>申请部门<i style="color:red;">*</i></label>
                 <input type="text" id="fdept" readonly />
             </div>
             <div class="mui-input-row">
-                <label>工作周</label>
-                <input type="text" id="fweek" readonly />
+                <label>申请日期<i style="color:red;">*</i></label>
+                <input type="date" id="fdate" readonly />
             </div>
-            <div class="mui-row itemtitle" style="height:10vw;text-align:center;padding-top:2vw;">
-                <label>主要工作事项描述<i style="color:red;">*</i></label>
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                <label>证明信息</label>
             </div>
-            <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-12" style="display:flex;">
-                    <textarea rows="5" id="fgznr" readonly></textarea>
-                </div>
+            <div class="mui-input-row">
+                <label>证明类型<i style="color:red;">*</i></label>
+                <input type="text" id="fzmlx" readonly  />
             </div>
-            <div class="mui-row itemtitle" style="height:10vw;text-align:center;padding-top:2vw;">
-                <label>存在主要问题及改进措施</label>
+            <div class="mui-input-row" style="display:flex;">
+                <label>用途</label>
+                <textarea rows="5" id="fyt" readonly></textarea>
             </div>
-            <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-12" style="display:flex;">
-                    <textarea rows="5" id="fczwt" readonly></textarea>
-                </div>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-8" style="display:flex;">
-                    <label>部门经理评价</label>
-                    <textarea rows="2" id="fpj_bmjl" readonly placeholder="请填写"></textarea>
-                </div>
-                <div class="mui-col-xs-4" style="display:flex;">
-                    <label>考核等级<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="fkhdj_bmjl" readonly placeholder="请选择"></textarea>
-                </div>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-8" style="display:flex;">
-                    <label>总监评价</label>
-                    <textarea rows="2" id="fpj_zj" readonly placeholder="请填写"></textarea>
-                </div>
-                <div class="mui-col-xs-4" style="display:flex;">
-                    <label>考核等级<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="fkhdj_zj" readonly placeholder="请选择"></textarea>
-                </div>
-            </div>
+            <div class="mui-input-row" style="height:7rem;overflow:scroll;" id="uploaddiv">
+                <div class="border border-t upload-img" style="top:0rem;">
+                    <!--上传图片-->
+                    <div class="clearfix upload-btn" id="children-bg">
+                        <label class="label">附件</label>
+                        <span class="tips" id="imageCount"><!--已添加0张--></span>
+                        <!--上传图片按钮  -->
+                        <span class="upload-addbtn" style="display:none;">
+                            <input type="file" accept="image/jpeg,image/jpg,image/png,image/jp2,image/bmp" id="file" style="opacity:0;">
+                        </span>
 
-            <input type="hidden" id="fmonth" readonly />
-            <input type="hidden" id="fyear" readonly />
-            <input type="hidden" id="fcfbj" readonly />
-
-            <input type="hidden" id="fksdate" readonly />
-            <input type="hidden" id="fjsdate" readonly />
-            <input type="hidden" id="ftbdate" readonly />
+                    </div>
+                    <div class="upload-img-list"></div>
+                </div>
+            </div>
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;display:none;">
+                <label>人事专员填写信息</label>
+            </div>
+            <div class="mui-input-row" style="display:none;">
+                <label>印章类型<i style="color:red;">*</i></label>
+                <input type="text" id="fyzlx" readonly  />
+            </div>
             <div class="mui-input-row" id="csd">
                 <label>加签</label>
                 <div class="mui-switch mui-switch-blue" id="csswitch">
@@ -172,6 +161,10 @@
             <button class="mui-btn mui-btn-danger" type="button" onclick="cancelConfirm()">取消</button>
         </div>
     </div>
+
+
+
+
     <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
     <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
     <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
