--- a/BPMMobile/Pages/WeeklyFlow2/FlowAskDetail.html
+++ b/BPMMobile/Pages/WeeklyFlow2/FlowAskDetail.html
@@ -16,78 +16,79 @@
 </head>
 <body>
     <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
-        <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;"></form>
-                <div class="mui-input-row">
-                    <label>员工姓名</label>
-                    <input type="text" id="fname" readonly />
-                    <input type="hidden" id="fno" />
-                </div>
-                <div class="mui-input-row" style="display:block !important;">
-                    <label>部门</label>
-                    <input type="text" id="fdept" readonly />
-                </div>
-                <div class="mui-input-row">
-                    <label>工作周</label>
-                    <input type="text" id="fweek" readonly />
-                </div>
-                <div class="mui-input-row itemtitle">
-                    <label>主要工作事项描述<i style="color:red;">*</i></label>
-                </div>
-                <div class="mui-row cutOffLine" style="padding:3vw;">
-                    <div class="mui-col-xs-12" style="display:flex;">
-                        <textarea rows="5" id="fgznr" readonly></textarea>
-                    </div>
-                </div>
-                <div class="mui-input-row itemtitle">
-                    <label>存在主要问题及改进措施</label>
-                </div>
-                <div class="mui-row cutOffLine" style="padding:3vw;">
-                    <div class="mui-col-xs-12" style="display:flex;">
-                        <textarea rows="5" id="fczwt" readonly></textarea>
-                    </div>
-                </div>
-                <div class="mui-row cutOffLine" style="padding:3vw;">
-                    <div class="mui-col-xs-8" style="display:flex;">
-                        <label>部门经理评价</label>
-                        <textarea rows="2" id="fpj_bmjl" readonly placeholder="请填写"></textarea>
-                    </div>
-                    <div class="mui-col-xs-4" style="display:flex;">
-                        <label>考核等级<i style="color:red;">*</i></label>
-                        <textarea rows="2" id="fkhdj_bmjl" readonly placeholder="请选择"></textarea>
-                    </div>
-                </div>
-                <div class="mui-row cutOffLine" style="padding:3vw;">
-                    <div class="mui-col-xs-8" style="display:flex;">
-                        <label>总监评价</label>
-                        <textarea rows="2" id="fpj_zj" readonly placeholder="请填写"></textarea>
-                    </div>
-                    <div class="mui-col-xs-4" style="display:flex;">
-                        <label>考核等级<i style="color:red;">*</i></label>
-                        <textarea rows="2" id="fkhdj_zj" readonly placeholder="请选择"></textarea>
-                    </div>
-                </div>
-
-                <input type="hidden" id="fmonth" readonly />
-                <input type="hidden" id="fyear" readonly />
-                <input type="hidden" id="fcfbj" readonly />
-
-                <input type="hidden" id="fksdate" readonly />
-                <input type="hidden" id="fjsdate" readonly />
-                <input type="hidden" id="ftbdate" readonly />
-        <div class="mui-table-view" style="margin-bottom:1rem;">
-            <div class="mui-table-view-cell  mui-collapse mui-active">
-                <a class="mui-navigate-right" href="#" style="background-color:#00a0ea;color:white;font-size:0.75rem;">
-                    历史签核意见
-                </a>
-                <div class="mui-collapse-content">
-                    <!--流程列表-->
-                    <div class="list">
-                        <ul id="signff"></ul>
-                    </div>
-
+        <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
+            <div class="mui-input-row">
+                <label>员工姓名</label>
+                <input type="text" id="fname" readonly />
+                <input type="hidden" id="fno" />
+            </div>
+            <div class="mui-input-row" style="display:block !important;">
+                <label>部门</label>
+                <input type="text" id="fdept" readonly />
+            </div>
+            <div class="mui-input-row">
+                <label>工作周</label>
+                <input type="text" id="fweek" readonly />
+            </div>
+            <div class="mui-row itemtitle" style="height:10vw;text-align:center;padding-top:2vw;">
+                <label>主要工作事项描述<i style="color:red;">*</i></label>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <textarea rows="5" id="fgznr" readonly></textarea>
                 </div>
             </div>
-        </div>
+            <div class="mui-row itemtitle" style="height:10vw;text-align:center;padding-top:2vw;">
+                <label>存在主要问题及改进措施</label>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <textarea rows="5" id="fczwt" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-8" style="display:flex;">
+                    <label>部门经理评价</label>
+                    <textarea rows="2" id="fpj_bmjl" readonly ></textarea>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>考核等级<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fkhdj_bmjl" readonly ></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-8" style="display:flex;">
+                    <label>总监评价</label>
+                    <textarea rows="2" id="fpj_zj" readonly ></textarea>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>考核等级<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fkhdj_zj" readonly ></textarea>
+                </div>
+            </div>
+
+            <input type="hidden" id="fmonth" readonly />
+            <input type="hidden" id="fyear" readonly />
+            <input type="hidden" id="fcfbj" readonly />
+
+            <input type="hidden" id="fksdate" readonly />
+            <input type="hidden" id="fjsdate" readonly />
+            <input type="hidden" id="ftbdate" readonly />
+            <div class="mui-table-view" style="margin-bottom:1rem;">
+                <div class="mui-table-view-cell  mui-collapse mui-active">
+                    <a class="mui-navigate-right" href="#" style="background-color:#00a0ea;color:white;font-size:0.75rem;">
+                        历史签核意见
+                    </a>
+                    <div class="mui-collapse-content">
+                        <!--流程列表-->
+                        <div class="list">
+                            <ul id="signff"></ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
     <input value="" id="stepId" name="stepId" type="hidden" />
     <input type="hidden" id="flowPerId" name="flowPerId" value="" />
